# Apple-Music-Play-History-Converter

./: .aider.chat.history.md  .gitattributes  .gitignore  ANALYSIS_3WAY_COMPARISON.md  Apple Music History Converter.spec  BRANCH-CHANGELOG.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CRASH_ANALYSIS.md  DEPLOYMENT_RESULTS.md  ITUNES_RATE_LIMIT_FINAL_FIX.md  LICENSE  MACOS_INSTALL.md  README.md  REAL_CSV_TEST_ANALYSIS.md  RELEASE_NOTES_v2.0.3.md  RELEASE_WORKFLOW.md  STARTUP_FIXES_PLAN.md  TESTING_RESULTS.md  TOGA_EXIT_CRASH_WORKAROUND.md  analyze_failures.py  apple_music_play_history_converter.py  appveyor.yml  build.py  build.sh  build_all_platforms.sh  converted.csv  database_dialogs.py  debug_daydreamin_detailed.py  fix_tkinter.py  index.html  mac_build.spec  macos_app_launcher.py  music_search_service.py  musicbrainz_manager.py  performance_test.py  progress_dialog.py  pyinstaller_config.spec  pyproject.toml  (+18 more)
.github/workflows/: build-windows.yml  build.yml  create_ico.py  generate_macos_spec.py  generate_windows_spec.py
.specstory/history/: fixing-itunes-api-and-gitignore-update.md  update-requirements-and-readme-instructions.md
_test_csvs/: Apple Music - Play History Daily Tracks.csv  Apple Music - Recently Played Tracks.csv  Apple Music Play Activity - Kira File.csv  Apple Music Play Activity full.csv  Apple Music Play Activity small.csv
archive/: check_duckdb_tables.py  compare_optimization_strategies.py  compare_track_search_performance.py  debug_musicbrainz_search.py  manual_optimize_mb.py  test_artist_only_optimization.py  test_complete_duckdb_solution.py  test_current_optimization_speed.py  test_final_sql_solution.py  test_fuzzy_table.py  test_fuzzy_table_strategies.py  test_itunes_api.py  test_large_csv.py  test_manager_unicode_fix.py  test_nfc_solution.py  test_optimization_performance.py  test_ultra_fast_csv.py  test_ultra_fast_large.py  test_ultra_fast_small.py  test_unicode_property_classes.py  verify_python_accent_handling.py
build_artifacts/: README.md  adhoc_sign.sh  build_all.py  build_linux.sh  build_macos.sh  build_windows.bat  create_icns.sh  get_team_id.sh  package_all_builds.py  sign_app_developer.sh  sign_macos_app.sh  test_build_environment.py  verify_builds.py  verify_macos_build.sh
demos/: README.md  demo_manual_import.py  demo_workflow.py
docs/: ALBUM_MATCHING_FIX.md  ANALYSIS_FUZZY_TABLE_OPTIMIZATION.md  APPVEYOR_ALL_PLATFORMS.md  APPVEYOR_FINDINGS.md  APPVEYOR_SETUP_GUIDE.md  ASYNC_CONVERSION_CHECKLIST.md  BUILD_CHANGES_SUMMARY.md  BUILD_ON_WINDOWS_LINUX.md  BUILD_STRATEGY_RECOMMENDATIONS.md  CRITICAL_FIXES_PLAN.md  CRITICAL_FIXES_SUMMARY.md  DEBUGGING_GUIDE.md  DIRECTORY_CLEANUP.md  EXISTING_FUNCTIONALITY_DOCUMENTATION.md  FINAL_SOLUTION.md  FREE_BUILD_SERVICES.md  GITHUB_ACTIONS_LINUX_ISSUE.md  GITHUB_ACTIONS_TEST_PLAN.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_COMPLETE.md  MANUAL_RELEASE_GUIDE.md  MCP_INTEGRATION.md  MIGRATION_V1_TO_V2_COMPREHENSIVE.md  MONITORING_TOOLS.md  MUSICBRAINZ_MATCHING_ALGORITHM.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_STRATEGY_REPORT.md  PARTIAL_TEST_INSIGHTS.md  QUICK_START_BUILD.md  READY_FOR_TESTING.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_WORKFLOW.md  SAFE_GITHUB_ACTIONS_TEST.md  SESSION_COMPLETE.md  TRACE_DEBUGGING.md  UNICODE_OPTIMIZATION_SOLUTION.md  activeContext.md  implementation-checklist.md  musicbrainz-hang-fix.md  optimization-plan.md  (+6 more)
docs/reports/: FINAL_STATUS_REPORT.md  FIXES_SUMMARY.md  IMPORT_VERIFICATION_REPORT.md  MUSICBRAINZ_IMPROVEMENTS.md
images/: aphc.icns
src/apple_music_history_converter.dist-info/: METADATA  WHEEL  top_level.txt
test_csvs/: Apple Music - Recently Played Tracks.csv
tests/: README.md  manual_import_safe.py  test_app.py  test_app_workflow.py  test_cross_platform.py  test_csv_query_simulation.py  test_database_debug.py  test_dialog_crash.py  test_download.py  test_extract.py  test_full_integration.py  test_import_function.py  test_import_with_progress.py  test_manual_import.py  test_manual_import_button.py  test_manual_import_fixes.py  test_musicbrainz_build.py  test_path_issue.py  test_ui_layout.py  test_utils.py  verify_compatibility.py
tests_toga/: README.md  conftest.py  debug_daydreamin.py  debug_daydreamin_detailed_v2.py  debug_intruder_alert_db.py  debug_intruder_detailed.py  gui_integration_test.py  investigate_database_difference.py  test_200_tracks_accuracy.py  test_artist_hint_usage.py  test_artist_matching_comprehensive.py  test_basic_functionality.py  test_comprehensive_comparison.py  test_comprehensive_workflows.py  test_intruder_alert.py  test_logging_system.py  test_mapping_cache.py  test_matching_accuracy_comprehensive.py  test_matching_edge_cases.py  test_musicbrainz_api_batch.py  test_musicbrainz_api_rate_limit.py  test_phonetic_matching.py  test_real_csv_files.py  test_real_csv_sampling.py  test_search_providers.py  test_security.py  test_session_alignment.py  test_with_cache_clear.py
wiki/: Building-from-Source.md  Development.md  FAQ.md  Home.md  Installation.md  Matching-Algorithm.md  MusicBrainz-Database.md  Troubleshooting.md  User-Guide.md
(+252 files in other folders)
